<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="grade_grade_deleted">Grade deleted</string>
    <string name="grade_grade_form_title">Set grade</string>
    <string name="grade_saving_grade">Saving grade…</string>
    <string name="grade_edit_grade">Edit grade</string>
    <string name="grade_add_grade">Add grade</string>
    <string name="grade_grade_weight">Weight %1$s</string>
    <string name="grade_no_grade">no grade</string>
    <string name="grade_current_grade">Current grade %1$s</string>
    <string name="grade_grades_title">Set grades</string>
    <string name="grade_new_grade">New grade: %1$s</string>
    <string name="grade_grade_with_literal">%1$s (%2$s)</string>
    <string name="grade_no_students">No students added to the class</string>
    <string name="grades_grade_with_term">%1$s (term %2$s)</string>
    <string name="grades_grade_average">Average %1$s</string>
    <string name="grade_score_input">Calculate from score</string>
    <string name="grade_score_input_error">Enter a positive number</string>
    <string name="grade_max_score_label">Max score</string>
    <string name="grade_student_score_label">Obtained score</string>
    <string name="grade_score_thresholds_save_info">Thresholds are saved separately for each grade</string>
    <string name="grade_score_thresholds_save">Save thresholds</string>
    <string name="grade_from_score">Grade from score: %1$s (%2$s\%%)</string>
</resources>