<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="lesson_attendance_title">Attendance</string>
    <string name="lesson_set_attendance">Set attendance</string>
    <string name="lesson_present">present</string>
    <string name="lesson_late">late</string>
    <string name="lesson_absent">absent</string>
    <string name="lesson_excused_absence">excused absence</string>
    <string name="lesson_exemption">exemption</string>
    <string name="lesson_no_attendance">not set</string>
    <string name="lesson_present_short">pres</string>
    <string name="lesson_late_short">late</string>
    <string name="lesson_absent_short">absent</string>
    <string name="lesson_excused_absence_short">excused</string>
    <string name="lesson_exemption_short">exempt</string>
    <string name="lesson_no_attendance_short">na</string>

    <string name="lesson_attendance_no_schedule">No schedule added.</string>
    <string name="lesson_attendance_edit_event">Edit data</string>
    <string name="lesson_attendance_statistics">Statistics</string>
    <string name="lesson_attendance_statistics_title">Attendance</string>
    <string name="lesson_attendance_cancelled">Class canceled</string>
    <string name="lesson_attendance_cancelled_with_date">%1$s (canceled)</string>

    <string name="lesson_date">Date %1$s</string>
    <string name="lesson_time">Time %1$s</string>

    <string name="lesson_grades">Grades</string>
    <string name="lesson_attendance">Attendance</string>
    <string name="lesson_activity">Activity</string>
    <string name="lesson_notes">Notes</string>
    <string name="lesson_grade_weight_error">Weight must be a number from 1 to 6</string>

    <string name="lesson_grade">Grade</string>
    <string name="lesson_grade_deleted">Grade deleted</string>
    <string name="lesson_saving_grade">Saving grade…</string>
    <string name="lesson_edit_grade">Edit grade</string>
    <string name="lesson_save_grade">Add grade</string>

    <string name="lesson_title">Title</string>
    <string name="lesson_name">Name</string>
    <string name="lesson_description">Description</string>
    <string name="lesson_weight">Weight</string>
    <string name="lesson_weight_data">Weight %1$s</string>
    <string name="lesson_average_grade">Average %1$s</string>
    <string name="lesson_weight_and_average">%1$s · %2$s</string>
    <string name="lesson_no_grades_in_term">No grades in term</string>
    <string name="lesson_no_activity">no activity</string>

    <string name="lesson_saving_lesson">Saving subject…</string>
    <string name="lesson_lesson_deleted">Subject deleted</string>
    <string name="lesson_saving_lesson_note">Saving subject note…</string>
    <string name="lesson_lesson_note_deleted">Subject note deleted</string>

    <string name="lesson_note_form_title">Subject note</string>
    <string name="lesson_edit_note">Edit note</string>
    <string name="lesson_add_note">Add note</string>
    <string name="lesson_empty_notes">No note has been written yet</string>

    <string name="lesson_school_class">Class %1$s</string>
    <string name="lesson_add_lesson">Add subject</string>
    <string name="lesson_edit_lesson">Edit subject</string>
    <string name="lesson_lesson">Subject</string>
    <string name="lesson_no_students_in_class">No students added to the class</string>

    <string name="lesson_term_label">Term</string>
    <string name="lesson_term">Term %1$s</string>
    <string name="lesson_attendance_no_term">Out of term</string>
    <string name="lesson_attendance_no_events_in_term">No classes in the term</string>
    <string name="lesson_first_term">I</string>
    <string name="lesson_second_term">II</string>

    <string-array name="lesson_suggestions">
        <item>Mathematics</item>
        <item>Polish language</item>
        <item>Foreign language</item>
        <item>History</item>
        <item>Plastics</item>
        <item>Technology</item>
        <item>Biology</item>
        <item>Music</item>
        <item>Computer science</item>
        <item>Physical Education (P.E.)</item>
        <item>Religion</item>
        <item>Ethics</item>
    </string-array>
</resources>