...
    <string name="ui_loading">Loading…</string>
    <string name="ui_saving">Saving…</string>
    <string name="ui_form_error">An unexpected error occurred while saving</string>
    <string name="ui_unexpected_error">An unexpected error occurred</string>
    <string name="ui_data_deleted">Deleted data</string>
    <string name="ui_required">Required*</string>
    <string name="ui_ok">OK</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_minus">Subtract</string>
    <string name="ui_plus">Add</string>
    <string name="ui_subject">Subject</string>
    <string name="ui_navigate_before">Navigate before</string>
    <string name="ui_navigate_next">Navigate next</string>
    <string name="ui_person">Person</string>
...
